--- a/app/controller/gamepad-config.css
+++ b/app/controller/gamepad-config.css
@@ -150,26 +150,36 @@
 	transform: translateY( calc(var(--button-travel) * var(--pressed, 0)) );
 }
 
-.gamepad-config > div {
-	color:black;
-	text-align: center;
-	position: absolute;
-	bottom:2.5rem;
-	left:0;
-	right:0;
-}
-
-.gamepad-config.input-kb > span {
-	margin:auto;
-	width: 33%;
-	height: 100%;
+.gamepad-config {
 	display: flex;
 	flex-direction: column;
-	padding-top: 1.25rem;
+}
+
+.gamepad-config section {
+	display: flex;
+	flex-direction: column;
+
+	margin:auto;
+	min-width: 33%;
+
+}
+
+.gamepad-config > div {
+	text-align: center;
+	padding: 1rem;
+	background-color: rgba(0,0,0,0.5);
+}
+
+.gamepad-config.input-kb section > .hud-character-string {
+	padding-bottom: 0.25rem;
+	padding-top: 0.15rem;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+	border-bottom: 0.01px solid #333;
 }
 
 .gamepad-config.input-kb {
-	background-color: #333 !important;
+	background-color: #222 !important;
 }
 
 .gamepad-config.input-kb div {
@@ -178,7 +188,7 @@
 }
 
 .gamepad-config.input-kb .hud-character-string {
-	margin-bottom: 0.2rem
+	/* margin-bottom: 0.2rem */
 }
 
 .gamepad-config .start path { opacity: calc(0.5  + var(--pressed-9)) !important; }
