--- a/app/actor/chopper.css
+++ b/app/actor/chopper.css
@@ -1,4 +1,7 @@
 .actor-item.actor-chopper .sprite {
+	width: 160px;
+	height: 96px;
+	top: 16px;
 	position: relative;
 
 }
@@ -15,13 +18,17 @@
 	animation: chopper-flying 90ms steps(2) infinite;
 
 	background-position-y: calc(-96px * var(--color));
-	transition: transform 1s ease-in-out;
+	transition: transform 2.25s ease-in-out;
 	transform-origin: 65% 50%;
 }
 
 .actor-item.actor-chopper[data-animation=exploded] .sprite:after {
-	transform: rotate(-180deg);
+	transform: rotate(-300deg);
 	animation-play-state: paused;
+}
+
+.actor-item.actor-chopper-damaged .sprite {
+	animation: boss-damage steps(1) infinite 45ms forwards;
 }
 
 @keyframes chopper-flying {
